import shutil
import tensorflow as tf
from keras import Model
from os.path import join
from os import mkdir, makedirs
from keras._tf_keras.keras.callbacks import ModelCheckpoint, CSVLogger, EarlyStopping
from keras._tf_keras.keras.models import load_model
from typing import override
from wandb.sdk import init, finish
from wandb.data_types import Image
from wandb.integration.keras import WandbMetricsLogger, WandbModelCheckpoint
from numpy import concatenate
from sklearn.preprocessing import LabelBinarizer
from glob import glob

from src.labels import iterate_valid_labels
from src.common.model import (
    ClassificationModel,
    ModelConstructorArgs,
    ModelInitializeArgs,
    TestArgs,
    TrainArgs,
    MultiRunTrainArgs,
    get_best_tf_weights,
    DEFAULT_DATASET,
)
from src.common.helpers import (
    get_next_test_run,
    read_dataframe,
    make_file,
)
from src.common.wandb import PROJECT_NAME
from src.hpe_dnn.architecture import DnnArch, get_model_factory
from src.hpe_dnn.helpers import df_to_dataset
from src.common.plot import plot_confusion_matrix


class HpeDnnModelInitializeArgs(ModelInitializeArgs):

    @override
    @property
    def model_arch(self) -> DnnArch:
        """Enum value specifying the architecture of the neural network model."""
        return self._model_arch

    @property
    def normalize(self) -> bool:
        """Normalize the numeric columns of the input data."""
        return self._normalize

    @property
    def dropout_rate(self) -> float:
        """Dropout rate to use between each layer."""
        return self._dropout_rate

    def __init__(
        self,
        model_arch: DnnArch = DnnArch.ARCH1,
        normalize: bool = True,
        dropout_rate=0.1,
    ):
        super().__init__(model_arch)
        self._normalize = normalize
        self._dropout_rate = dropout_rate


class HpeDnnConstructorArgs(ModelConstructorArgs):

    @override
    @property
    def model_initialize_args(self) -> HpeDnnModelInitializeArgs:
        return self._model_initialize_args

    def __init__(
        self,
        name: str,
        model_initialize_args: HpeDnnModelInitializeArgs = HpeDnnModelInitializeArgs(),
        data_root_path: str = "data",
        dataset_name: str = DEFAULT_DATASET,
    ):
        ModelConstructorArgs.__init__(
            self, name, model_initialize_args, data_root_path, dataset_name
        )

    @override
    def copy_with(self, name=None, dataset_name=None) -> "HpeDnnConstructorArgs":
        return HpeDnnConstructorArgs(
            name=self.name if name is None else name,
            model_initialize_args=self.model_initialize_args,
            data_root_path=self.data_root_path,
            dataset_name=self.dataset_name if dataset_name is None else dataset_name,
        )


class HpeDnnTrainArgs(TrainArgs):

    @property
    def augment(self) -> bool:
        """Indicates if the training data will be augmented"""
        return self._augment

    def __init__(self, epochs=20, balanced=False, additional_config={}, augment=False):
        TrainArgs.__init__(self, epochs, balanced, additional_config)
        self._augment = augment

        if balanced and not augment:
            print(
                "Warning: avoid reusing the exact same image multiple times by also enabling "
                + "augmentation when balancing the dataset"
            )


class HpeDnnMultiRunTrainArgs(MultiRunTrainArgs):

    @override
    @property
    def train_args(self) -> HpeDnnTrainArgs:
        return self._train_args

    def __init__(
        self,
        runs: int = 5,
        train_args: HpeDnnTrainArgs = HpeDnnTrainArgs(),
    ):
        MultiRunTrainArgs.__init__(self, runs, train_args)


class HpeDnn(ClassificationModel):

    model: Model | None = None

    @override
    @property
    def model_initialize_args(self) -> HpeDnnModelInitializeArgs:
        return self._model_initialize_args

    @override
    @property
    def model_arch(self) -> DnnArch:
        """Enum that is mapped to a factory function"""
        return self.model_initialize_args.model_arch

    @override
    def __init__(self, args: HpeDnnConstructorArgs):
        ClassificationModel.__init__(self, args)

    @override
    def execute_train_runs(self, args: HpeDnnMultiRunTrainArgs):
        ClassificationModel.execute_train_runs(self, args)

    def __get_train_wandb_config(self, args: HpeDnnTrainArgs) -> dict:
        return (
            self._get_common_wandb_config()
            | {
                "balanced": args.balanced,
                "augmented": args.augment,
                "run": self._get_next_train_run(),
            }
            | args.additional_config
        )

    def __get_test_wandb_config(self, args: TestArgs) -> dict:
        return (
            self._get_common_wandb_config()
            | {
                "balanced": False,
                "augmented": False,
                "run": self._get_current_train_run(),
            }
            | args.additional_config
        )

    @override
    def train_model(self, args: HpeDnnTrainArgs):

        if self.model is None:
            raise Exception("Cannot train before model is initialized")

        train_ds = self.__get_data_from_split(
            "train", augment=args.augment, balance=args.balanced, shuffle=True
        )
        val_ds = self.__get_data_from_split(
            "val", augment=False, balance=False, shuffle=False
        )

        checkpoint_dir = self.__get_checkpoint_dir()
        log_dir = self.__get_tensorboard_log_dir()
        results_file = self.__get_results_file_path()

        config = self.__get_train_wandb_config(args)
        init(
            project=PROJECT_NAME,
            job_type="train",
            group="hpe_dnn",
            name=self.name,
            config=config,
            dir=self.data_root_path,
        )

        makedirs(checkpoint_dir)
        makedirs(log_dir)
        make_file(results_file)
        try:

            checkpoint_path = join(
                checkpoint_dir,
                "epoch_{epoch:02d}__val_accuracy_{val_categorical_accuracy:.4f}.keras",
            )
            cp_callback = ModelCheckpoint(
                checkpoint_path,
                save_best_only=True,
                save_weights_only=False,
                verbose=1,
                monitor="val_categorical_accuracy",
            )

            csv_callback = CSVLogger(filename=results_file)

            early_stopping_callback = EarlyStopping(
                monitor="val_categorical_accuracy", patience=3
            )

            self.model.fit(
                train_ds,
                epochs=args.epochs,
                validation_data=val_ds,
                callbacks=[
                    cp_callback,
                    csv_callback,
                    WandbMetricsLogger(),
                    WandbModelCheckpoint(join(log_dir, "wandb.keras")),
                    early_stopping_callback,
                ],
            )
        except Exception as e:
            # remove result files
            shutil.rmtree(self._get_current_train_dir())
            raise e
        finally:
            finish()

    @override
    def _get_model_dir(self):
        return join(self.data_root_path, "runs", "hpe_dnn", self.name)

    @override
    def _get_best_model_path(self):
        model_dir = self._get_model_dir()
        weight_paths = glob(join(model_dir, "*", "models", "*.keras"))
        return get_best_tf_weights(weight_paths)

    @override
    def _fresh_model(self):
        print(f"loading a fresh model '{self.model_arch}'")

        train_ds = self.__get_data_from_split(
            "train", augment=False, balance=False, shuffle=False
        )
        debugging = False
        model_func = get_model_factory(self.model_arch)
        self.model = model_func(
            train_ds,
            self.model_initialize_args.normalize,
            debugging,
            self.model_initialize_args.dropout_rate,
        )

    @override
    def _load_model(self, best_model_path):
        print(f"loading the model '{self.name}' from '{best_model_path}'")
        self.model = load_model(best_model_path)

    @override
    def test_model(self, args: TestArgs):
        self._load_best_model()

        model_path = self._get_model_dir()
        test_run = get_next_test_run(model_path)
        test_run_path = join(model_path, test_run)
        mkdir(test_run_path)

        test_data = self.__get_data_from_split(
            split="test", augment=False, balance=False, shuffle=False
        )

        predictions = self.model.predict(test_data)
        labels = concatenate([y for _, y in test_data], axis=0)

        lb = LabelBinarizer()
        lb.fit(list(iterate_valid_labels()))
        predictions = lb.inverse_transform(predictions)
        labels = lb.inverse_transform(labels)

        plot_confusion_matrix(
            labels,
            predictions,
            save_path=join(test_run_path, "confusion_matrix.png"),
            normalized=False,
        )
        plot_confusion_matrix(
            labels,
            predictions,
            save_path=join(test_run_path, "confusion_matrix_normalized.png"),
            normalized=True,
        )

        wandb_run = None
        callbacks = []

        if args.write_to_wandb:
            config = self.__get_test_wandb_config(args)
            wandb_run = init(
                project=PROJECT_NAME,
                job_type="test",
                group="hpe_dnn",
                name=self.name,
                config=config,
                dir=self.data_root_path,
            )
            callbacks.append(WandbMetricsLogger())

        results = self.model.evaluate(test_data, return_dict=True, callbacks=callbacks)

        if wandb_run:
            wandb_run.log(results)
            wandb_run.log(
                {
                    "confusion_matrix": Image(
                        join(test_run_path, "confusion_matrix.png")
                    ),
                    "confusion_matrix_normalized": Image(
                        join(test_run_path, "confusion_matrix_normalized.png")
                    ),
                }
            )
            wandb_run.finish()

        self._save_test_metrics(results)

        return results

    @override
    def get_test_accuracy_metric(self) -> float:
        return self.get_test_metrics()["categorical_accuracy"]

    def __get_checkpoint_dir(self):
        train_dir = self._get_next_train_dir()
        return join(train_dir, "models")

    def __get_tensorboard_log_dir(self):
        train_dir = self._get_next_train_dir()
        return join(train_dir, "logs")

    def __get_results_file_path(self):
        train_dir = self._get_next_train_dir()
        return join(train_dir, "results.csv")

    def __get_dataset_dir(self):
        return join(self.data_root_path, "df", self.dataset_name)

    def __get_data_from_split(
        self, split: str, augment, balance, shuffle
    ) -> tf.data.Dataset:
        df_path = join(self.__get_dataset_dir(), f"{split}.pkl")
        df = read_dataframe(df_path)
        return df_to_dataset(df, augment=augment, balance=balance, shuffle=shuffle)
